Add getOrders endpoint